# aura-messenger

./: README.md
server/: pyproject.toml
server/src/docs/: __init__.py  auth.py  messages.py  users.py
server/src/routes/: __init__.py  auth.py  messages.py  users.py
server/src/server/: main.py
